# theweather

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.direnv/: init  locale  paths  (+2 more)
.sandbox/temporal/: _settings.py  pyproject.toml  run_workflow.py  worker.py  workflows.py
.sandbox/temporal/config/: settings.toml
.sandbox/weatherapi_sandbox/: demo.py  pyproject.toml  send_current_weather.py
.sandbox/weatherapi_sandbox/config/: settings.toml
collectors/openmeteo-collector/: pyproject.toml  requirements.txt
collectors/openmeteo-collector/src/openmeteo_collector/: __init__.py
collectors/weatherapi-collector/: alembic.ini  pyproject.toml  requirements.txt
collectors/weatherapi-collector/config/: .secrets.toml  settings.toml
collectors/weatherapi-collector/migrations/: env.py
collectors/weatherapi-collector/migrations/versions/: 2025_10_10_2355-8fb7b572de90_initial_migration.py
collectors/weatherapi-collector/scripts/db/: all_db_items.py  apply_latest_revision.sh  create_revision.sh  vacuum_db.py
collectors/weatherapi-collector/scripts/temporal/: run_weather_workflows.py  start_worker.py
collectors/weatherapi-collector/src/weatherapi_collector/: __init__.py  __main__.py  constants.py  db_init.py  scheduled.py  temporal_worker.py
collectors/weatherapi-collector/src/weatherapi_collector/client/: current.py  forecast.py  requests.py
collectors/weatherapi-collector/src/weatherapi_collector/config/: _settings.py
collectors/weatherapi-collector/src/weatherapi_collector/convert/: methods.py
collectors/weatherapi-collector/src/weatherapi_collector/db_client/: __init__.py  __methods.py  base.py  current_weather.py  forecast.py  location.py
collectors/weatherapi-collector/src/weatherapi_collector/depends/: __init__.py  db_depends.py
collectors/weatherapi-collector/src/weatherapi_collector/domain/: __init__.py  models.py  repository.py  schemas.py
collectors/weatherapi-collector/src/weatherapi_collector/schedules/: __init__.py  schedule_lib.py
collectors/weatherapi-collector/src/weatherapi_collector/schedules/apscheduler_lib/: __init__.py  scheduler.py
collectors/weatherapi-collector/src/weatherapi_collector/schedules/apscheduler_lib/jobs/: __init__.py  cleanup_jobs.py  data_jobs.py  http_jobs.py
collectors/weatherapi-collector/src/weatherapi_collector/schedules/schedule_lib/: __init__.py  schedules.py
collectors/weatherapi-collector/src/weatherapi_collector/schedules/schedule_lib/jobs/: __init__.py  cleanup_jobs.py  data_jobs.py  http_jobs.py
collectors/weatherapi-collector/src/weatherapi_collector/schedules/temporal/: __init__.py  activities.py  worker.py  workflows.py
database/db-operator/: pyproject.toml
database/db-operator/config/: .secrets.toml  settings.toml
database/db-operator/logs/: copy_db.py
database/db-operator/sandbox/: proto.py
database/db-operator/scripts/: dump_to_parquet.py
database/db-operator/src/db_operator/: __init__.py
database/db-operator/src/db_operator/config/: _settings.py
database/db-operator/src/db_operator/depends/: __init__.py  db_depends.py
database/db-operator/src/db_operator/methods/: __init__.py  _df.py
database/db-operator/src/db_operator/utils/db_utils/: __init__.py  _inspect.py
notebooks/analysis/: pyproject.toml
notebooks/analysis/prototype/: config.py  duck.ipynb  ibis.ipynb  list_db_data.ipynb  prototype.ipynb
sandbox/: pyproject.toml
sandbox/temporal/: activities.py  run_workflow.py  workflows.py
sandbox/temporal/config/: .secrets.toml
sandbox/weatherapi_sandbox/: all_db_items.py  send_dummy_metrics.py
sandbox/weatherapi_sandbox/config/: .secrets.toml  settings.toml
schedulers/temporal-scheduler/: pyproject.toml  requirements.txt
schedulers/temporal-scheduler/config/: settings.toml
schedulers/temporal-scheduler/scripts/: create_namespace.sh  create_namespaces.sh
schedulers/temporal-scheduler/scripts/workers/: start_weatherapi_worker.py
schedulers/temporal-scheduler/scripts/workflows/: run_weatherapi_workflows.py
schedulers/temporal-scheduler/src/temporal_scheduler/: constants.py
schedulers/temporal-scheduler/src/temporal_scheduler/weatherapi/: __init__.py  activities.py  worker.py  workflows.py
schedulers/temporal-scheduler/src/temporal_scheduler/weatherapi/scripts/: __init__.py  run_workflows.py
servers/api-server/: pyproject.toml  requirements.txt
servers/api-server/config/: .secrets.toml  settings.toml
servers/api-server/migrations/: env.py
servers/api-server/migrations/versions/: 2025_10_11_0025-f6ad5167bb7c_initial_migration.py
servers/api-server/scripts/: start_api_server.py  start_api_server.sh
servers/api-server/src/api_server/: __init__.py  __main__.py  main.py  start_api.py
servers/api-server/src/api_server/config/: __init__.py  _settings.py
servers/api-server/src/api_server/db/: _db.py
servers/api-server/src/api_server/depends/: db.py
servers/api-server/src/api_server/routers/: __init__.py  api_router.py  health.py
servers/api-server/src/api_server/routers/v1/: __init__.py  api_router.py  v1_router.py
servers/api-server/src/api_server/utils/: logging_override.py
shared/: pyproject.toml  requirements.txt
shared/config/: .secrets.toml  settings.toml
shared/migrations/: env.py
shared/migrations/versions/: 2025_10_11_0032-3a5b138bbaac_initial_migration.py
shared/src/shared/: __init__.py
shared/src/shared/config/: __init__.py  _settings.py
shared/src/shared/db/: __init__.py  __methods.py  annotated.py  types.py
shared/src/shared/depends/: __init__.py  http.py
shared/src/shared/domain/: __init__.py
shared/src/shared/domain/collectors/: __init__.py
shared/src/shared/domain/collectors/payloads/: __init__.py  schemas.py
shared/src/shared/domain/weatherapi/: __init__.py
shared/src/shared/domain/weatherapi/location/: models.py  repository.py
shared/src/shared/domain/weatherapi/weather/: __init__.py
shared/src/shared/http_lib/: __init__.py  controllers.py
shared/src/shared/http_lib/config/: _settings.py
shared/src/shared/setup/: __init__.py  _logging.py
(+68 files in other folders)
