[project]
name = "sandbox"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.11",
    "hishel>=0.1.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "temporalio>=1.18.0",
    "theweather-shared",
    "weatherapi-collector",
]

[tool.uv.sources]
theweather-shared = { path = "../shared" }
weatherapi-collector = { path = "../collectors/weatherapi-collector" }
