[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "5534031+redjax@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "dynaconf>=3.2.11",
    "pydantic>=2.11.9",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
shared = "shared:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
