[project]
name = "theweather-shared"
version = "0.1.0"
description = "Shared utilities for theweather applications"
readme = "README.md"
authors = [
    { name = "redjax", email = "5534031+redjax@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "dynaconf>=3.2.11",
    "hishel>=0.1.3",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
theweather-shared = "shared:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
