[project]
name = "temporal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.11",
    "temporalio>=1.18.0",
    "theweather-shared",
    "weatherapi-collector",
]

[tool.uv.sources]
theweather-shared = { path = "../../shared" }
weatherapi-collector = { path = "../../collectors/weatherapi-collector" }
