[project]
name = "openmeteo-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "5534031+redjax@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
openmeteo-collector = "openmeteo_collector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
