[project]
name = "weatherapi-collector"
version = "0.1.0"
description = "Weather data collector using WeatherAPI"
readme = "README.md"
authors = [
    { name = "redjax", email = "5534031+redjax@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.11",
    "hishel>=0.1.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "schedule>=1.2.2",
]

[dependency-groups]
dev = ["theweather-shared"]

[project.scripts]
weatherapi-collector = "weatherapi_collector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weatherapi_collector"]

# For local development - editable install of shared package
[tool.uv.sources]
theweather-shared = { path = "../../shared", editable = true }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
