[project]
name = "db-operator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "5534031+redjax@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "duckdb>=1.4.0",
    "dynaconf>=3.2.11",
    "fastparquet>=2024.11.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
db-operator = "db_operator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
