[project]
name = "analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.0",
    "dynaconf>=3.2.11",
    "fastparquet>=2024.11.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.13.3",
]
