[project]
name = "api-server"
version = "0.1.0"
description = "Weather API server"
readme = "README.md"
authors = [
    { name = "redjax", email = "5534031+redjax@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.11",
    "fastapi>=0.117.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "alembic>=1.16.5",
    "theweather-shared",
]

[project.scripts]
api-server = "api_server.start_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_server"]

# For local development - editable install of shared package
[tool.uv.sources]
theweather-shared = { path = "../../shared", editable = true }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
